--- a/pages/learn/il_paradigma_di_stockhausen/03_02_valori.html
+++ b/pages/learn/il_paradigma_di_stockhausen/03_02_valori.html
@@ -85,22 +85,85 @@
 </section>
 
 
+<!-- Image-->
+      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+          <div class="container-fluid">
+              <div class="row justify-content-center">
+                  <div class="col-12 col-lg-5">
+                      <div class="image-wrapper">
+                          <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig6.png" alt="www.gabrielavelitch.com">
+                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 6</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    
-                  </p>
+                    Quali sono gli assunti di base di Stockhausen, cioè i valori del suo paradigma:
+                    <br>
+                    <br>
+                    Idea che la musica abbia uno sviluppo continuo e orientato: esiste la musica del passato, esiste quella del presente, esiste quella del futuro e il compositore non può fare altro che muoversi verso di essa, lasciandosi alle spalle un certo stadio, sia a livello di comunità che a livello di individuo, e attraverso mutamenti, sviluppi, fratture, dà luogo a una nuova rete di relazioni dando vita allo stadio x+1.
+                    <br>
+                    <br>
+                    La cosa importante è che nella vita di un compositore o in quella di una civiltà, il paradigma musicale vigente subisca delle fratture che portino da una vecchia a una nuova rete di relazioni, e quindi sostanzialmente da uno stadio precedente a quello successivo.
+                    <br>
+                    <br>
+                    Se pensiamo a quanto abbiamo già iniziato ad accennare sulla post-modernità e sulla sua tendenza all'eterna compresenza del passato e a una sostanziale assenza di visione del futuro, ci fa capire quanto Stockhausen sia distante da noi e quanto sia oggi importante capire il suo punto di vista.
+                    </p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+              <div class="container-fluid">
+                  <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                              <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig6_2.png" alt="www.gabrielavelitch.com">
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 6_2</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
 
+          <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-md-12 col-lg-8">
+                          <p class="mbr-text mbr-fonts-style display-7">
+                            Un altro principio <a href="https://velitch.github.io/velitch/2021-11-02-04_01_vibrazione_come_modello_universale/"><b>universalità della vibrazione</b></a>. Qui entriamo in un dominio molto immaginifico, quasi poetico. La vibrazione é considerata da Stockhausen un principio unificante dell'universo, tutto l'universo vibra. Ogni entità dell'universo vibra con qualsiasi ordine di grandezza, che va dall'infinitamente piccolo all'infinitamente grande. Ogni vibrazione può essere considerata come una vibrazione acustica. Ogni vibrazione acustica produce musica. Quindi sostanzialmente la musica é un riflesso dell'universo.
+                            <br>
+                            <br>
+                            Ci sono degli assunti, cioè delle basi, del pensiero di Stockhausen che sono evidentemente filosofico religiose e in particolare si parla di sincretismo religioso e filosofico. Sincretismo, di cui <i>Stimmung</i> è sicuramente il simbolo, vuol dire l'assunzione, la fusione e la rielaborazione in vista di un nuovo assetto di credenze di credo religiosi e convinzioni metafisiche preesistenti. Il tutto avviene per Stockhausen sotto il segno dell'induismo, anche grazie agli insegnamenti non diretti di un grande mistico indiano <i>Sri Aurobindo</i>.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Image-->
+                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                      <div class="container-fluid">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-5">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig7.png" alt="www.gabrielavelitch.com">
+                                      <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 7</p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
