--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <p>Lecturer - Laboratory of Musical Technologies
                       </p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.uniroma3.it/insegnamento-erogato/dipartimento-di-filosofia-comunicazione-e-spettacolo/l/2020-2021/dams-discipline-delle-arti-della-musica-e-dello-spettacolo-0580706200300002/6f17b962-8ffc-4748-ab91-7bad4d6e7ee4--20710327/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://filosofiacomunicazionespettacolo.uniroma3.it/ricerca/laboratori-di-ricerca/laboratorio-di-tecnologie-musicali-e-acustica/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-3">
