--- a/index.html
+++ b/index.html
@@ -322,36 +322,40 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section data-bs-version="5.1" class="form5 cid-t1GksNdDkS" id="form5-2n">
-<div class="container">
+<section data-bs-version="5.1" class="form5 cid-t7qXsS13I8" id="form5-2q">
+
+
+    <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
-                <strong>CONTACTS</strong></h3>
+                <strong>Contacts</strong>
+            </h3>
             <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Send me an email!
-              <div>I will get back to you as soon as possible.</div></h4>
+<div>I will get back to you as soon as possible.</div></h4>
         </div>
         <div class="row justify-content-center mt-4">
-            <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://gabrielavelitch.com" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5mZmg/iH3F3IVvGdSBOszUh3OOXsoKQ5DRn2fnByW/Pu4wKUVvqHcnh4j+nu5eTVqZicc2o/faRVgee9oAZ7K7bWq9YXN6MAEgApe+wd9FwYIteiG8mcIBUkLmLLEIH3">
+            <div class="col-lg-8 mx-auto mbr-form">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler">
                     <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you! Message successfully sent!</div>
+
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                             Oops...! some problem!
                         </div>
                     </div>
                     <div class="dragArea row">
                         <div class="col-md col-sm-12 form-group mb-3" data-for="name">
-                            <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form5-2n">
+                            <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form5-2q">
                         </div>
                         <div class="col-md col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="E-mail" data-form-field="email" class="form-control" value="" id="email-form5-2n">
+                            <input type="email" name="email" placeholder="E-mail" data-form-field="email" class="form-control" value="" id="email-form5-2q">
+                        </div>
+                        <div class="col-12 form-group mb-3" data-for="url">
+                            <input type="url" name="url" placeholder="Your Site" data-form-field="url" class="form-control" value="" id="url-form5-2q">
                         </div>
                         <div class="col-12 form-group mb-3" data-for="textarea">
-                            <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form5-2n"></textarea>
+                            <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form5-2q"></textarea>
                         </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn">
-                            <button type="submit" class="btn btn-primary display-4">Send message</button>
-                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-4">Submit</button></div>
                     </div>
                 </form>
             </div>
