--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler">
+                <form action="contact-form-process.php" method="POST" class="mbr-form form-with-styler">
                     <div class="row">
 
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
