--- a/assets/internals/gkv_footer.html
+++ b/assets/internals/gkv_footer.html
@@ -19,7 +19,10 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
-                    <a href="https://www.gabrielavelitch.com/index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
+                    <a href="https://www.gabrielavelitch.com/index.html#header13-1" class="text-primary">© Designed and coded by Gabriela Velitch, 2022.</a>
+
+                  </p>
+
             </div>
         </div>
     </div>
