--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <div class="iconfont-wrapper">
-                            <span class="mbr-iconfont mobi-mbri-setting2" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
+                            <span class="mbr-iconfont mobi-mbri-setting2 mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Live Sound Engeneering</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">With the care of timbre, dynamics and space, I have gained hundreds of hours of concerts of all kinds: from classical to contemporary music, from folk to jazz.<br><br>The next one is just a surprise and we will turn it into an experience!&nbsp;<br></p>
