--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <div class="iconfont-wrapper">
-                            <span class="mbr-iconfont mobi-mbri-website-theme-2 mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
+                            <span class="mbr-iconfont mobi-mbri-idea mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Instruments Developement</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.<br><br>Check out my latest projects!&nbsp;<br></p>
