--- a/pages/learn/il_paradigma_di_stockhausen/04_03_spirale.html
+++ b/pages/learn/il_paradigma_di_stockhausen/04_03_spirale.html
@@ -131,8 +131,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_02_continuum.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_04_galassia.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
