--- a/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html
+++ b/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html
@@ -114,7 +114,7 @@
                     <br>
                     <br>
                     <b>Materiali di base</b>:
-                    Tutti quelli definito come i semilavorati ovvero elementi precomposti di cui la musica tradizionale si serve per esprimere i suoi enunciati <a href="https://velitch.github.io/velitch/2021-11-02-03_01_esemplari/">(esemplari)</a>.
+                    Tutti quelli definito come i semilavorati ovvero elementi precomposti di cui la musica tradizionale si serve per esprimere i suoi enunciati <a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari/">(esemplari)</a>.
                     <br>
                     <br>
                     <b>Principi costruttivi</b>:
