--- a/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html
+++ b/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Concetto di Pregiudizio</title>
+  <title>IVibrazione Come Modello Universale</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
