--- a/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html
+++ b/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html
@@ -132,8 +132,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_04_galassia.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_02_metodi_in_stockhausen.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
