--- a/pages/learn/il_paradigma_di_stockhausen/05_02_metodi_in_stockhausen.html
+++ b/pages/learn/il_paradigma_di_stockhausen/05_02_metodi_in_stockhausen.html
@@ -121,8 +121,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_03_principi_operativi_di_stockhausen.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
