--- a/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html
+++ b/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html
@@ -264,7 +264,7 @@
                                             <b>Le fonti del pensiero di Stockhausen</b>
                                             <br>
                                             <br>
-                                            Stockhausen, Karlheinz. 163. Texte zur elektronischen und instrumentalen Musik: Band 1, Aufsätze 1952-1962 zur Theorie des Komponierens. Cologne: M. DuMont Schauberg.
+                                            ____. 1963. Texte zur elektronischen und instrumentalen Musik: Band 1, Aufsätze 1952-1962 zur Theorie des Komponierens. Cologne: M. DuMont Schauberg.
                                             <br>
                                             <br>
                                             ____. 1964. Texte zu eigenen Werken, zur Kunst Anderer, Aktuelles, Band 2: Aufsätze 1952-1962 zur musikalischen Praxis. Cologne: M. DuMont Schauberg.
