--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="img/site/scecilia-551x301.webp" data-slide-to="1" data-bs-slide-to="1" alt="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Conservatoire Santa Cecilia</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Conservatorio Santa Cecilia</strong></h5>
                         <p>Live Sound Engineer
                         </p>
                     </div>
@@ -286,7 +286,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Sound Design</strong></h5>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">"I would like to know how sound is made, to know how to recreate it and move it in space."
 <br>
-<br>These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian teachers, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!.</p>
+<br>These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian Professors, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!.</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/tools.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
