--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -176,7 +176,12 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a></li>
                                 </ul>
                                 </p>
+
+                                <div id="tab4" class="tab-pane" role="tabpanel">
+                                    <div class="row">
+                                        <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
+
                                 <strong>
                                   FILTERS
                                   <ul>
@@ -190,6 +195,11 @@
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></li>
                                 </ul>
                                 </p>
+
+                                <div id="tab5" class="tab-pane" role="tabpanel">
+                                    <div class="row">
+                                        <div class="col-md-12">
+
                                 <p class="mbr-text mbr-fonts-style display-7">
                                 <strong>
                                 EFFECTS & REVERBS
