--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -177,11 +177,6 @@
                                 </ul>
                                 </p>
 
-                                <div id="tab4" class="tab-pane" role="tabpanel">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                <p class="mbr-text mbr-fonts-style display-7">
-
                                 <strong>
                                   FILTERS
                                   <ul>
@@ -196,10 +191,6 @@
                                 </ul>
                                 </p>
 
-                                <div id="tab5" class="tab-pane" role="tabpanel">
-                                    <div class="row">
-                                        <div class="col-md-12">
-
                                 <p class="mbr-text mbr-fonts-style display-7">
                                 <strong>
                                 EFFECTS & REVERBS
@@ -211,6 +202,30 @@
                                   <br><br>
                                   </strong>
                                 </p>
+
+                                <div id="tab4" class="tab-pane" role="tabpanel">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <p class="mbr-text mbr-fonts-style display-7">
+                                                Free Website Builder offers a huge collection of 2500+ website blocks, templates and
+                                                themes with thousands flexible options. Combine blocks from different themes to
+                                                create a unique mix.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="tab5" class="tab-pane" role="tabpanel">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <p class="mbr-text mbr-fonts-style display-7">
+                                                shhss</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="tab6" class="tab-pane" role="tabpanel">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <p class="mbr-text mbr-fonts-style display-7">
+                                                hfshsshf</p>
                             </div>
                         </div>
                     </div>
