--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -228,6 +228,96 @@
     </div>
 </section>
 
+
+
+<section data-bs-version="5.1" class="tabs content18 cid-t0WGFEERur" id="tabs1-2h">
+
+
+
+
+    <div class="container-fluid">
+
+        <div class="row justify-content-center mt-4">
+            <div class="col-12 col-md-9">
+                <ul class="nav nav-tabs mb-4" role="tablist">
+                    <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab0" aria-selected="true"><strong>Control</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab1" aria-selected="true"><strong>Synthesies</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab2" aria-selected="true"><strong>Filters</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab3" aria-selected="true">
+                            <strong>Phases</strong>
+                        </a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab4" aria-selected="true">
+                            <strong>Design</strong>
+                        </a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-2h_tab5" aria-selected="true">
+                            <strong>Architecture</strong>
+                        </a></li>
+                </ul>
+                <div class="tab-content">
+                    <div id="tab1" class="tab-pane in active" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                    Mobirise is a free offline app for Windows and Mac to easily create small/medium
+                                    websites, landing pages, online resumes and portfolios. 3100+ beautiful website
+                                    blocks, templates and themes help you to start easily.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab2" class="tab-pane" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                    Mobile web traffic overtook desktop one in 2016 and will only grow, and that's why
+                                    it's important to create websites that look good on all devices. No special actions
+                                    required, all sites you make with the Builder are mobile-friendly. You don't have to
+                                    create a special mobile version of your website, it will adapt automagically. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab3" class="tab-pane" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                    Mobirise is an easy and simple free website builder - just drop site elements to
+                                    your page, add content and style it to look the way you like.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab4" class="tab-pane" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                    Free Website Builder offers a huge collection of 2500+ website blocks, templates and
+                                    themes with thousands flexible options. Combine blocks from different themes to
+                                    create a unique mix.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab5" class="tab-pane" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                    shhss</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab6" class="tab-pane" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                    hfshsshf</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
