--- a/pages/learn/il_paradigma_di_stockhausen/05_03_principi_operativi_di_stockhausen.html
+++ b/pages/learn/il_paradigma_di_stockhausen/05_03_principi_operativi_di_stockhausen.html
@@ -109,8 +109,10 @@
                   <p class="mbr-text mbr-fonts-style display-7">
                     Essi sono:
                     </p>
-                    - serialismo
-                    - intuizione
+                    <ul>
+                      <li>serialismo</li>
+                      <li>intuizione</li>
+                    </ul>
                     <br>
                     <br>
                     <h3>Intuizione</h3>
