--- a/pages/learn/il_paradigma_di_stockhausen/05_04_materiali_di_base_di_stockhausen.html
+++ b/pages/learn/il_paradigma_di_stockhausen/05_04_materiali_di_base_di_stockhausen.html
@@ -92,7 +92,7 @@
                   <div class="col-12 col-lg-5">
                       <div class="image-wrapper">
                           <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig11.png" alt="www.gabrielavelitch.com">
-                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 10</p>
+                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 11</p>
                       </div>
                   </div>
               </div>
@@ -177,7 +177,7 @@
                     Rappresenta eventuali possibili movimenti all'interno del momento. Anche se Stockhausen ci ha detto che nel momento non succede nulla. È dunque ciò che succede all'interno del momento. Nel momento non dovrebbe succedere nulla, ma trattandosi come qualcosa che deve muoversi nel tempo, finisce per avere un comportamento anche lui. Comportamento che va dal <b>non succedere nulla all'applicarsi di un cambiamento o di un processo</b>.
                     <br>
                     <br>
-                    Ricordandosi che la parola <a href="https://velitch.github.io/velitch/2021-11-02-05_05_processo/"><b>processo</b></a> è in Stockhausen molto ambigua, poiché presume sia una tendenza temporale all'interno del momento, sia un materiale di lavoro con cui Stockhausen procede come una forma di materiale, sia una forma operativa o principio operativo; ma che alla fine significa nell'immaginario stockhauseniano: come viene sviluppato il decorso musicale.
+                    Ricordandosi che la parola <a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_05_processo.html"><b>processo</b></a> è in Stockhausen molto ambigua, poiché presume sia una tendenza temporale all'interno del momento, sia un materiale di lavoro con cui Stockhausen procede come una forma di materiale, sia una forma operativa o principio operativo; ma che alla fine significa nell'immaginario stockhauseniano: come viene sviluppato il decorso musicale.
                     </div>
                   </p>
                 </div>
@@ -192,8 +192,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_03_principi_operativi_di_stockhausen.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_05_processo.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
