--- a/pages/learn/il_paradigma_di_stockhausen/05_00_generalizzazioni_principi_operativi.html
+++ b/pages/learn/il_paradigma_di_stockhausen/05_00_generalizzazioni_principi_operativi.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Paradigma di Stockhausen</title>
+  <title>Generalizzazioni: Principi Operativi</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -72,74 +72,56 @@
   <!-- Navbar-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
-
-<!-- Header-->
-<section data-bs-version="5.1" class="info3 cid-sYzbPCvQ7r mbr-parallax-background" id="info3-1g">
-  <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
-  </div>
-  <div class="container">
-      <div class="row justify-content-center">
-          <div class="card col-12 col-lg-10">
-              <div class="card-wrapper">
-                  <div class="card-box align-center">
-                      <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>IL PARADIGMA DI STOCKHAUSEN</strong></h4>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+  <!-- Title-->
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-md-12 col-lg-10">
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Il Paradigma di Stockhausen</h3>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Generalizzazioni: Principi Operativi</strong></h4>
+            </div>
+        </div>
+    </div>
 </section>
 
 
-  <!-- Index-->
+  <!-- Text-->
 
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-10">
-                  <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-                    <br>
-                    <br>
-                      <strong>INDICE</strong>
-                  </h4>
+              <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                      <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/01_00_il_paradigma.html"><b>1. Il Paradigma</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/02_00_il_concetto_di_pregiudizio.html"><b>2. Il Concetto di Pregiudizio</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/03_00_da_cosa_è_costituito_un_paradigma.html"><b>3. Da Cosa è Costituito un Paradigma</b></a></li>
-                        <ul>
-                          <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html"><b>3.1. Esemplari</b></a></li>
-                          <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/03_02_valori.html"><b>3.2. Valori</b></a></li>
-                      </ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_00_modelli.html"><b>4. Modelli</b></a></li>
-                        <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html"><b>4.1. Vibrazione come movimento universale</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_02_continuum.html"><b>4.2. Continuum</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_03_spirale.html"><b>4.3. Spirale</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_04_galassia.html"><b>4.4. Galassia</b></a></li>
-                      </ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_00_generalizzazioni_principi_operativi.html"><b>5. Generalizzazioni: principi operativi</b></a></li>
-                        <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html"><b>5.1. Metodi nella tradizione</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_02_metodi_in_stockhausen.html"><b>5.2. Metodi in Stockhausen</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_03_principi_operativi_di_stockhausen.html"><b>5.3. Principi operativi di Stockhausen</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_04_materiali_di_base_di_stockhausen.html"><b>5.4. Materiali di base (o di lavoro) di Stockhausen</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_05_processo.html"><b>5.5. Processo</b></a></li>
-                      </ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_00_generalizzazioni_principi_costruttivi.html"><b>6. Generalizzazioni: principi costruttivi</b></a></li>
-                        <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_01_serializzazione.html"><b>6.1. Serializzazione</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html"><b>6.2. Genesi della forma</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_03_proiezione_della_formula.html"><b>6.3. Proiezione della formula</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_04_schema.html"><b>6.4. Schema</b></a></li>
-                      </ul>
-                      </ul>
-                      <br><br>
+                    <ul>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html"><i>Metodi nella tradizione</i></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_02_metodi_in_stockhausen.html"><i>Metodi in Stockhausen</i></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_03_principi_operativi_di_stockhausen.html"><i>Principi operativi di Stockhausen</i></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_04_materiali_di_base_di_stockhausen.html"><i>Materiali di base (o di lavoro) di Stockhausen</i></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_05_processo.html"><i>Processo</i></a></li>
+                  </ul>
                   </p>
-              </div>
-          </div>
-      </div>
-  </section>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+<!-- Prev/Next-->
+<section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-10">
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_04_galassia.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                    <br>
+                    <br>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
