--- a/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html
+++ b/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>IVibrazione Come Modello Universale</title>
+  <title>Vibrazione Come Modello Universale</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/03_02_valori.html">&lt; Previous</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_00_modelli.html">&lt; Previous</a>
                     <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_02_continuum.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
