--- a/pages/learn/il_paradigma_di_stockhausen/04_04_galassia.html
+++ b/pages/learn/il_paradigma_di_stockhausen/04_04_galassia.html
@@ -122,8 +122,19 @@
                     <br>
                       <li><b>Metafora del centro e dell'orbita</b>: tutti i sistemi di una galassia a partire dalla galassia stessa sono dotati di un centro e di materiale organizzato orbitante. Tutto questo si riversa sia nella teoria dei gruppi sia nella formula, che abbiamo detto di avere qualcosa di geografico in sé (dimensione locale o globale). Per esempio il fatto che all'interno di un gruppo possa esserci un centro che organizza un un campo armonico che attrae gli eventi sonori secondari.</li>
                     </ul>
-                    <br>
-                    <br>
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+  <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
                     Il fatto che esista una continuità tra locale e globale tra gruppi, il fatto che quest'ultimi possano ereditare caratteristiche da un gruppo all'altro sul piano sintattico.
                     <br>
                     <br>
