--- a/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html
+++ b/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html
@@ -86,8 +86,6 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
@@ -98,6 +96,19 @@
                     <li><b>Periodica</b>: espressa in termini di frequenza e ampiezza.</li>
                     <li><b>Aperiodica</b>: espressa in termini di probabilità.</li>
                   </ul>
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-8">
+                  <p class="mbr-text mbr-fonts-style display-7">
                     Tutto questo ha a che vedere con la teoria dei punti e dei gruppi e soprattutto nel modo di trattarli, perché a seconda che ci si riferisca a un ambito concettuale determinabile e quindi che fa parte di quest'area dell'onda periodica, oppure che ci si riferisca a un ambito non determinabile ma probabile, quindi sostanzialmente statistica contro determinismo, ci sono due modi di operare completamente diversi e a volte antagonisti, a volte integrati nel modo di trattare appunto i punti e i gruppi.
                     <br>
                     <br>
