--- a/pages/learn/il_paradigma_di_stockhausen/05_04_materiali_di_base_di_stockhausen.html
+++ b/pages/learn/il_paradigma_di_stockhausen/05_04_materiali_di_base_di_stockhausen.html
@@ -101,8 +101,6 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
@@ -170,7 +168,18 @@
                       <li>Gestalt (profilo complessivo, che possiamo cogliere con unico sguardo)</li>
                       <li>Struktur (cogliere elementi interni)</li>
                     </ul>
-                    <br>
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
                     <b>Tendenza temporale</b>
                     <br>
                     <br>
@@ -178,7 +187,6 @@
                     <br>
                     <br>
                     Ricordandosi che la parola <a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_05_processo.html"><b>processo</b></a> è in Stockhausen molto ambigua, poiché presume sia una tendenza temporale all'interno del momento, sia un materiale di lavoro con cui Stockhausen procede come una forma di materiale, sia una forma operativa o principio operativo; ma che alla fine significa nell'immaginario stockhauseniano: come viene sviluppato il decorso musicale.
-                    </div>
                   </p>
                 </div>
             </div>
