--- a/pages/learn/il_paradigma_di_stockhausen/05_05_processo.html
+++ b/pages/learn/il_paradigma_di_stockhausen/05_05_processo.html
@@ -105,26 +105,45 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    <p style="text-align:justify;">
                     Riguarda alcune composizioni, (processo come focus sul materiale):
-                    </p>
                     <ul>
                       <li>Plus-Minus</li>
                       <li>Solo</li>
                       <li>Prozession</li>
                       <li>Kurzwellen</li>
                     </ul>
-                    <p style="text-align:justify;">
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
                     Che sono processi non conclusi, in cui il compositore ci fornisce le regole e la scatola di montaggio, lasciando a noi (esecutori, compositori o direttori) il compito di finalizzare la partitura partendo dagli elementi. Fornendoci i materiali di input e l'algoritmo.
                     <br>
                     <br>
                     Altre due opere fatte con gli stessi criteri, ma già finalizzate dal compositore.
-                    </p>
                     <ul>
                       <li>Hymnen</li>
                       <li>Telemusik</li>
                     </ul>
-                    <p style="text-align:justify;">
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+                    <!-- Text-->
+                    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-md-12 col-lg-8">
+                                    <p class="mbr-text mbr-fonts-style display-7">
                     Esse sono i due unici esempi di musica concreta che Stockhausen abbia prodotto (escludendo l'Etude realizzato a Parigi).
                     Trattandosi di musica su nastro, non avrebbe alcun senso fornire delle regole di cui il compositore non può avere i materiali, e dunque Stockhausen procede alla finalizzazione del materiale.
                     <br>
