--- a/pages/learn/il_paradigma_di_stockhausen/06_04_schema.html
+++ b/pages/learn/il_paradigma_di_stockhausen/06_04_schema.html
@@ -99,14 +99,13 @@
           </div>
       </section>
 
-  <!-- Text-->
+<!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
                     In questo schema vediamo messi in relazione i quattro cardini del paradigma Stockhausen, ovvero:
-                    <br>
                     <ul>
                       <li>gli assunti fondamentali o valori di base</li>
                       <li>le immagini o metafore o modelli</li>
@@ -117,15 +116,29 @@
                         <li>materiali di lavoro</li>
                     </ul>
                     </ul>
-                    <br>
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Text-->
+      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+          <div class="container">
+              <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-8">
+                      <p class="mbr-text mbr-fonts-style display-7"> 
                     In questo schema non figurano le strutture mistiche di Stockhausen, ma è presente la relatività progressiva di Stockhausen, ovvero quella capacità che ha un determinato materiale, processo, metodo o concetto di estendersi e di essere riassorbito a un livello superiore di operatività. Così come i punti sono riassorbiti nei gruppi, i gruppi si estendo la loro concezione ai momenti e a loro volta momenti, punti e gruppi vanno a costituire il materiale geografico all'interno delle formule.
                     <br>
                     <br>
                     <h3>Assunti fondamentali</h3>
                     <br>
                     In realtà <b>principio di relatività progressiva</b> significa: ripensare un dato stadio del proprio sviluppo (scientifico, artistico o cognitivo), ripensarlo e ricollocarlo in una struttura più complessa; questa complessità è crescente fino alla formula, dopodiché Stockhausen smette di render conto di questo processo, un po' per il prevalere della musica intuitiva ed un po' poiché la formula rappresenta il tetto di questo processo, ovvero la galassia nella sua estensione massima, in cui non si può postulare un ulteriore principio di espansione.
-                    <br>
-                    <br>
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
                     <h3>Modelli</h3>
                     <br>
                     Questo <b>principio di relatività progressiva</b> ha delle immagini molto eloquenti in:
@@ -135,19 +148,25 @@
                       <li>idea di <a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_02_continuum.html">continuum</a></li>
                       <li>idea di <a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html">mondo vibrante</a> (ovvero la totalità delle cose è soggetta a vibrazione ovvero è il soggetto di una qualche attività di tipo musicale)</li>
                     </ul>
-                    <br>
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
                     <h3>Metodi di principio</h3>
                     <br>
                     <ul>
                       <li> L'idea di <b>mondo vibrante</b> a passa per il principio di <b>intuizione</b>, che è un germe di arbitrio, di non spiegato e inspiegabile che abbiamo all'intero dei brani di Stockhausen fin dall'inizio.</li>
                       <li>Il serialismo più volte descritto e definito.</li>
                     </ul>
-                    <br>
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
                     <h3>Metodi di lavoro</h3>
                     <br>
                     Che riguardano a loro volta i materiali ben precisi:
-                    <br>
-                    <br>
                     <ul>
                       <li>suono -> forma punti</li>
                       <li>parametrici statistici (moltiplicati) -> formano i gruppi</li>
@@ -155,8 +174,11 @@
                       <li>processi di trasformazione legate a forme drammaturgiche -> legate a processi (applicabili a pezzi finalizzati anche direttamente dall'autore)</li>
                       <li>principio compositivo -> formula (punto di arrivo)</li>
                     </ul>
-                    <br>
-                    <br>
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
                     Coenen collega l'intuizione solamente alla formula, mentre il principio del serialismo è onnicomprensivo. Anche se il principio dell'intuizione si dovrebbe estendere a tutte quelle zone oscure(carnevalesche, ovvero in cui vi è una sospensione delle regole), che inizia ben prima del momento della musica intuitiva.
                     <br>
                     <br>
