--- a/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
@@ -210,14 +210,42 @@
                     </div>
                 </div>
             </section>
-                            <h3>Le forme</h3>
-                            <h4>Forme determinate</h4>
+
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                    <h4>I. Forme determinate</h4>
+                                      <p class="mbr-text mbr-fonts-style display-7">
                             Partitura scritta tutta per intero.
-                            <br>
-                            <h4>Forme variabili</h4>
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                    <h4>II. Forme variabili</h4>
+                                      <p class="mbr-text mbr-fonts-style display-7">
                             Forme in cui sono presenti elementi di casualità ed indeterminazione.
-                            <br>
-                            <h4>Forme polivalenti</h4>
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                    <h4>III. Forme polivalenti</h4>
+                                      <p class="mbr-text mbr-fonts-style display-7">
                             Le forme polivalenti sono forme che scaturiscono da processi come in Plus-Minus, e qui vediamo realizzata quella differenza tra forme variabili e forme polivalenti, ovvero quella differenza che c'è tra forme aleatorie (Scambi di Poesseur o Plus-Minus di Stockhausen) e opere aperte. In forme variabili c'è un elemento di casualità, mentre le forme polivalenti si strutturano man mano che si procede con l'allestimento dell'opera ma con tutte forme prevedibili ed incluse nel materiale di base.
                           </p>
                         </div>
