--- a/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
@@ -200,8 +200,10 @@
                                     <h4>1. Punti</h4>
                                       <p class="mbr-text mbr-fonts-style display-7">
                             Altra ambiguità riguarda il tipo di criterio seguito va per punti, gruppi e sottoinsiemi, sembra quasi che questi
+                          </p>
                             <h4>2. Sottogruppi</h4>
                             <h4>3. Insiemi</h4>
+                            <p class="mbr-text mbr-fonts-style display-7">
                             Questi insiemi (definiti da Coenen come collective), parola tedesca collective, esempio di un collective, non è ne un gruppo ne un'aggregazione di punti, non ulteriormente scomponibile.
                             Anche qui sembra che la necessità di simmetria e perfetta corrispondenza in ogni punto di organizzazione sistematica, prevalga sulla effettiva realizzazione di opere ben definite.
                             Coenen parla di collective per la prima volta, e dunque anche qui prendiamo questa suddivisione con le pinze.
