--- a/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
@@ -201,7 +201,26 @@
                                       <p class="mbr-text mbr-fonts-style display-7">
                             Altra ambiguità riguarda il tipo di criterio seguito va per punti, gruppi e sottoinsiemi, sembra quasi che questi
                           </p>
-                            <h4>2. Sottogruppi</h4>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                <h4>2. Sottogruppi</h4>
+                          </div>
+                      </div>
+                  </div>
+              </section>
+
+              <!-- Text-->
+                        <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-12 col-lg-8">
                             <h4>3. Insiemi</h4>
                             <p class="mbr-text mbr-fonts-style display-7">
                             Questi insiemi (definiti da Coenen come collective), parola tedesca collective, esempio di un collective, non è ne un gruppo ne un'aggregazione di punti, non ulteriormente scomponibile.
